--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
   <!-- Header -->
   <header class="header">
-    <img src="https://via.placeholder.com/30x30" alt="Charity Water Logo">
+    <img src="WaterCharity logo" alt="Charity Water Logo">
     <span>charity: water SUPPORTER</span>
   </header>
 
